--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             sağlıyor, belge sürecinde onlara rehberlik ediyoruz.
                         </p>
                     </div>
-                    <img src="assets/images/1.jpeg" alt="Nefisly Neden Farklı" class="story-image" loading="lazy">>
+                    <img src="assets/images/1.jpeg" alt="Nefisly Neden Farklı" class="story-image" loading="lazy">
                 </div>
             </div>
         </div>
