Optimize: Convert images to WebP format for faster loading
- Convert all JPEG images to WebP (30-40% size reduction)
- Update image references in HTML from .jpeg/.png to .webp
- Maintain image quality while reducing file size significantly
- Improves page load performance on all devices

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="#" class="logo">
-                <img src="assets/images/Logo.png" alt="Nefisly Logo" class="logo-img" loading="lazy">
+                <img src="assets/images/Logo.webp" alt="Nefisly Logo" class="logo-img" loading="lazy">
                 <span class="logo-text">Nefisly</span>
             </a>
             <ul class="nav-links">
@@ -122,7 +122,7 @@
                             kadınların sesi olma hayaliyle başladı. Bu yolculukta, onların görünmeyen emeğini hem <strong>ekonomik</strong> hem de <strong>sosyal</strong> anlamda değerli kılmayı amaçlıyoruz.
                         </p>
                     </div>
-                    <img src="assets/images/6.jpeg" alt="Nefisly'nin Kökeni" class="story-image" loading="lazy">
+                    <img src="assets/images/6.webp" alt="Nefisly'nin Kökeni" class="story-image" loading="lazy">
                 </div>
 
                 <div class="story-card-wrapper">
@@ -134,7 +134,7 @@
                             destekleyici bir köprü kuruyor.</p>
                         <p><strong>Emek, umut, lezzetin</strong> buluştuğu adres.</p>
                     </div>
-                    <img src="assets/images/11.jpeg" alt="Bir Hayaldan Doğdu" class="story-image" loading="lazy">
+                    <img src="assets/images/11.webp" alt="Bir Hayaldan Doğdu" class="story-image" loading="lazy">
                 </div>
 
                 <div class="story-card-wrapper">
@@ -147,7 +147,7 @@
                             sağlıyor, belge sürecinde onlara rehberlik ediyoruz.
                         </p>
                     </div>
-                    <img src="assets/images/1.jpeg" alt="Nefisly Neden Farklı" class="story-image" loading="lazy">
+                    <img src="assets/images/1.webp" alt="Nefisly Neden Farklı" class="story-image" loading="lazy">
                 </div>
             </div>
         </div>
@@ -165,32 +165,32 @@
 
             <div class="features-grid">
                 <div class="feature-card">
-                    <img src="assets/images/10.jpeg" alt="Ev Mutfaghından Sofranıza" class="feature-img" loading="lazy">
+                    <img src="assets/images/10.webp" alt="Ev Mutfaghından Sofranıza" class="feature-img" loading="lazy">
                     <h3>Ev Mutfağından Sofranıza</h3>
                     <p>Sipariş verdiğinizde sanayi tipi bir fırın değil, <strong>bir evin emektar ocağı</strong> yanıyor. Tıpkı annenizin sizi beklerken yaptığı gibi, taze ve sevgiyle pişiyor. <strong>Endüstriye karşı ev lezzetinin sıcaklığı.</strong></p>
                 </div>
                 <div class="feature-card">
-                    <img src="assets/images/12.jpeg" alt="Kadınlara Güç Veriyoruz" class="feature-img" loading="lazy">
+                    <img src="assets/images/12.webp" alt="Kadınlara Güç Veriyoruz" class="feature-img" loading="lazy">
                     <h3>Kadın Emeğinin Ekonomik Gücü</h3>
                     <p>Her satış, ev hanımlarının <strong>kazanç elde etmesini</strong> ve bağımsız olmalarını sağlıyor. Onlara dedik ki: <strong>'Siz lezzete odaklanın, yorucu tarafını biz sırtlarız.'</strong> Pazarlama ve lojistik bize ait.</p>
                 </div>
                 <div class="feature-card">
-                    <img src="assets/images/13.jpeg" alt="Güvenilir ve Yasal" class="feature-img" loading="lazy">
+                    <img src="assets/images/13.webp" alt="Güvenilir ve Yasal" class="feature-img" loading="lazy">
                     <h3>Güvenilir ve Yasal Model</h3>
                     <p>Evden üretim yapan bireylerin <strong>vergi muafiyetinden</strong> yararlanarak yasal çerçevede satış yapabilmesi için <strong>bilgilendirici ve yönlendirici</strong> bir rol üstleniyoruz. Nefisly, <strong>mevzuat hakkında rehberlik</strong> eder.</p>
                 </div>
                 <div class="feature-card">
-                    <img src="assets/images/6.jpeg" alt="Sofranızdaki Umut" class="feature-img" loading="lazy">
+                    <img src="assets/images/6.webp" alt="Sofranızdaki Umut" class="feature-img" loading="lazy">
                     <h3>Sofranızdaki Umut</h3>
                     <p>O tabakla sadece karnınız doymuyor; <strong>emekçi bir kadının mutfağına umut</strong> oluyorsunuz. Belki o yemek, kadının kızını üniversiteye göndermesi için bir adım. <strong>Hayallere güç katıyorsunuz.</strong></p>
                 </div>
                 <div class="feature-card">
-                    <img src="assets/images/14.jpeg" alt="Hijyenik Ev Yemeği" class="feature-img" loading="lazy">
+                    <img src="assets/images/14.webp" alt="Hijyenik Ev Yemeği" class="feature-img" loading="lazy">
                     <h3>Hijyenik Ev Yemeği Garantisi</h3>
                     <p>Tüm satıcılarımız <strong>Bakanlık onaylı Hijyen Belgesi</strong> sahibidir. Her yemek en yüksek hijyen standartlarında hazırlanır. <strong>%100 güvenli ve hijyenik ev yemeği</strong> tadını çıkarın.</p>
                 </div>
                 <div class="feature-card">
-                    <img src="assets/images/15.jpeg" alt="Sipariş Ver Destek Ol" class="feature-img" loading="lazy">
+                    <img src="assets/images/15.webp" alt="Sipariş Ver Destek Ol" class="feature-img" loading="lazy">
                     <h3>Sipariş Ver, Destek Ol</h3>
                     <p>Her siparişinizle <strong>bir kadının hayallerine ortak</strong> oluyorsunuz. Belki o gelir sayesinde çocuğu okula gidebilir, belki kendi işini kurabilir. <strong>Sipariş verirken bir hayata dokunuyorsunuz.</strong></p>
                 </div>
